# oa-specs-famapp

./: .gitignore  CNAME  LICENSE.md  README.md  index.html  main.py  openapi.json  pyproject.toml  schemas.py
.github/workflows/: deploy_docs.yml
docs/: index.html
elements/: index.html
redoc/: index.html
swagger/: index.html
